@@ -34,8 +34,6 @@
 
 		// Sorting callback
 		this.setSortingCallback( function ( a, b ) {
-			var diff;
-
 			if ( !a.isRead() && b.isRead() ) {
 				return -1; // Unread items are always above read items
 			} else if ( a.isRead() && !b.isRead() ) {
@@ -47,9 +45,10 @@
 			}
 
 			// Reverse sorting
-			diff = Number( b.getTimestamp() ) - Number( a.getTimestamp() );
-			if ( diff !== 0 ) {
-				return diff;
+			if ( b.getTimestamp() < a.getTimestamp() ) {
+				return -1;
+			} else if ( b.getTimestamp() > a.getTimestamp() ) {
+				return 1;
 			}
 
 			// Fallback on IDs
