@@ -33,8 +33,6 @@
 
 		// Define the sorting order
 		this.setSortingCallback( function ( a, b ) {
-			var diff;
-
 			if ( !a.isRead() && b.isRead() ) {
 				return -1; // Unread items are always above read items
 			} else if ( a.isRead() && !b.isRead() ) {
@@ -43,16 +41,17 @@
 				return -1;
 			} else if ( a.isForeign() && !b.isForeign() ) {
 				return 1;
-			} else {
-				// Reverse sorting
-				diff = Number( b.getTimestamp() ) - Number( a.getTimestamp() );
-				if ( diff !== 0 ) {
-					return diff;
-				}
-
-				// Fallback on IDs
-				return b.getId() - a.getId();
 			}
+
+			// Reverse sorting
+			if ( b.getTimestamp() < a.getTimestamp() ) {
+				return -1;
+			} else if ( b.getTimestamp() > a.getTimestamp() ) {
+				return 1;
+			}
+
+			// Fallback on IDs
+			return b.getId() - a.getId();
 		} );
 
 		this.resetLoadingOption();
