@@ -1,3 +1,8 @@
+July, 2016
+-----------
+* BREAKING CHANGE: JS variables: wgEchoSeenTime now uses ISO 8601, and
+  alert/notice instead of alert/message.
+
 April, 2016
 -----------
 * BREAKING CHANGE: $wgEchoDefaultNotificationTypes has been split into
